修复电流文件路径错误